bases/infrastructure/bridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge
  namespace: default
  labels:
    app: bridge
spec:
  selector:
    matchLabels:
      app: bridge
  template:
    metadata:
      labels:
        app: bridge
    spec:
      containers:
        - name: bridge
          image: olympus.azurecr.io/bridge:master-bc37ba3c
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: olympus.azurecr.io
