bases/infrastructure/bridge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
  name: bridge.uksouth.bink.sh
  namespace: default
spec:
  rules:
    - host: bridge.uksouth.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bridge
                port:
                  number: 9000
  tls:
    - hosts:
        - bridge.uksouth.bink.sh
      secretName: bridge.uksouth.bink.sh
